Issue #6337 sticky top horizontal scrollbar in diff modal

--- a/docroot/themes/iucn_backend/css/style.css
+++ b/docroot/themes/iucn_backend/css/style.css
@@ -1709,6 +1709,9 @@ table.diff-context-wrapper {
 .paragraph-diff-form-modal .double-scrollbar-helper {
   height: 14px;
   overflow: auto hidden;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 .paragraph-diff-form-modal .double-scrollbar-helper .inner {
   height: 14px;
