--- a/docroot/themes/iucn_backend/less/components/diff.less
+++ b/docroot/themes/iucn_backend/less/components/diff.less
@@ -187,6 +187,10 @@
   .double-scrollbar-helper {
     height: 14px;
     overflow: auto hidden;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+
     .inner {
       height: 14px;
       overflow: hidden;
